--- a/backend/views/bilty.ejs
+++ b/backend/views/bilty.ejs
@@ -47,7 +47,7 @@
         <div class="flex justify-between items-center">
           <!-- Logo -->
           <img
-            src="http://localhost:5000/static/logo.png"
+            src="https://bhandal-roadways-doc-maker.onrender.com/static/logo.png"
             alt="Bhandal Roadways Logo"
             class="size-30 ml-4 -mt-16"
           />
@@ -309,7 +309,7 @@
             >
               <div class="text-sm text-right mt-1">
                 <% if (bilty.includeDigitalStamp) { %>
-                <img src="http://localhost:5000/static/stamp.jpg" alt="stamp" class="size-20 mx-auto" />
+                <img src="https://bhandal-roadways-doc-maker.onrender.com/static/stamp.jpg" alt="stamp" class="size-20 mx-auto" />
                 <% } %>
                 <p
                   class="font-normal <%= bilty.includeDigitalStamp ? 'mt-1' : 'mt-20' %>"
