--- a/backend/views/bilty.ejs
+++ b/backend/views/bilty.ejs
@@ -10,6 +10,12 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
+        @font-face{
+        font-family: 'Impact', sans-serif;
+        src: url('http://localhost:5000/static/impact.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+        }
       body {
         font-family: sans-serif;
         background-color: transparent;
