--- a/backend/views/bilty.ejs
+++ b/backend/views/bilty.ejs
@@ -12,7 +12,7 @@
     <style>
         @font-face{
         font-family: 'Impact', sans-serif;
-        src: url('http://localhost:5000/static/impact.woff') format('woff');
+        src: url('https://bhandal-roadways-doc-maker.onrender.com/static/impact.woff') format('woff');
         font-weight: normal;
         font-style: normal;
         }
