--- a/backend/views/bilty.ejs
+++ b/backend/views/bilty.ejs
@@ -12,12 +12,12 @@
     <style>
         @font-face{
         font-family: 'Impact', sans-serif;
-        src: url('https://bhandal-roadways-doc-maker.onrender.com/static/impact.woff') format('woff');
+        src: url('/static/impact.woff') format('woff');
         font-weight: normal;
         font-style: normal;
         }
       body {
-        font-family: sans-serif;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         background-color: transparent;
       }
       #bilty-container {
